examples/spring-boot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  selector:
    app: spring-app
  ports:
    - name: http
      port: 8080
      targetPort: http
